Development/KSJApi.Inc/KSJApiBase.h

	enum KSJ_ADDRESSMODE //枚举类型凯视佳抽点模式定义（分为列抽点和行抽点）
	{ 
		KSJ_SKIPNONE = 0, //正常输出所有视场设置范围内的像素点
		KSJ_SKIP2, //当设置为列时，输出col0, col1, col4, col5, col8, col9等，    当设置为行时，输出row0, row1, row4, row5, row8, row9等
		KSJ_SKIP3, //当设置为列时，输出col0, col1, col6, col7, col12, col13等，  当设置为行时，输出row0, row1, row6, row7, row12, row13等
		KSJ_SKIP4, //当设置为列时，输出col0, col1, col8, col9, col16, col17等，  当设置为行时，输出row0, row1, row8, row9, row16, row17等
		KSJ_SKIP8  //当设置为列时，输出col0, col1, col16, col17, col32, col33等，当设置为行时，输出row0, row1, row16, row17, row32, row33等
	};
	///////////////////////////////////////////Preview/////////////////////////////////
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetDefaultFieldOfView
    // 功能：获取设备的默认预览视场大小，也就是设备所支持的最大视场
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pnColStart： 输出，返回图像感光芯片预览时成像感光的有效区域起始列位置
    //       pnRowStart：输出，返回图像感光芯片预览时成像感光的有效区域起始行位置
	//       pnColSize： 输出，返回图像感光芯片预览时成像感光的有效区域水平像素数
    //       pnRowSize：输出，返回图像感光芯片预览时成像感光的有效区域垂直行数
	//       pColAddressMode： 输出，返回图像感光芯片预览时成像感光的有效区域列抽点模式（请参考KSJ_ADDRESSMODE的定义）
    //       pRowAddressMode：输出，返回图像感光芯片预览时成像感光的有效区域行抽点模式（请参考KSJ_ADDRESSMODE的定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetDefaultFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewSetFieldOfView
    // 功能：设置预览视场大小
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pnColStart： 输入，预览时有效成像区域相对于默认最大成像区域的水平像素起始位置
    //       pnRowStart：输入，预览时有效成像区域相对于最大成像区域的垂直行起始位置
	//       pnColSize： 输入，预览时有效成像区域的水平像素数
    //       pnRowSize：输入，预览时有效成像区域的垂直行数
	//       AmCol： 输入，预览时针对有效成像区域列抽点模式（请参考KSJ_ADDRESSMODE的定义）
    //       AmRow：输入，预览时针对有效成像区域行抽点模式（请参考KSJ_ADDRESSMODE的定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewSetFieldOfView(int nIndex, int nColStart, int nRowStart, int nColSize, int nRowSize, KSJ_ADDRESSMODE AmCol, KSJ_ADDRESSMODE AmRow);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetFieldOfView
    // 功能：获取预览视场的大小
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pnColStart： 输出，返回预览时有效成像区域相对于默认最大成像区域的水平像素起始位置
    //       pnRowStart：输出，返回预览时有效成像区域相对于最大成像区域的垂直行起始位置
	//       pnColSize： 输出，返回预览时有效成像区域的水平像素数
    //       pnRowSize：输出，返返回预览时有效成像区域的垂直行数
	//       pColAddressMode： 输出，返回预览时针对有效成像区域列抽点模式（请参考KSJ_ADDRESSMODE的定义）
    //       pRowAddressMode：输出，返回预览时针对有效成像区域行抽点模式（请参考KSJ_ADDRESSMODE的定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetSize
    // 功能：得到预览图像的宽度和高度
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pnWidth： 输出，返回当前视场模式设置下的实际预览图像的像素宽度
    //       pnHeight：输出，返回当前视场模式设置下的实际预览图像的像素高度
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetSize(int nIndex, int *pnWidth, int *pnHeight);
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetSizeEx
    // 功能：获得日志相关信息
    // 参数：
    //       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
	//       pnWidth： 输出，返回图像的宽度（像素）
    //       pnHeight：输出，返回图像的高度（像素）
    //       pnBitCount：输出，返回当前视场模式设置下的实际预览图像的位图深度
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetSizeEx(int nIndex, int *pnWidth, int *pnHeight, int *pnBitCount);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewSetPos
    // 功能：设置视频图像在窗口上的显示位置
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       hWnd： 输入，显示窗口的句柄
    //       x： 输入，显示位置相对窗口左上角水平偏移（像素）
	//       y： 输入，显示位置相对窗口左上角垂直偏移（像素）
	//       nWidth： 输入，显示的宽度，这个宽度如果大于预览图像的宽度，图像会水平放大，反之缩小
	//       nHeight： 输入，显示图像的高度，这个宽度如果大于预览图像的高度，图像会垂直放大，反之缩小
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewSetPos(int nIndex, HWND hWnd, int x, int y, int nWidth, int nHeight);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetPos
    // 功能：得到当前视频预览图像的显示位置
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       px： 输出，返回显示位置相对窗口左上角水平偏移（像素）
	//       py： 输出，返回显示位置相对窗口左上角垂直偏移（像素）
	//       pnWidth： 输出，返回显示的宽度
	//       pnHeight： 输出，返回显示图像的高度
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetPos(int nIndex, int *px, int *py, int *pnWidth, int *pnHeight);
	// Preview Mode
	enum KSJ_PREVIEWMODE// 枚举类型视频预览模式
	{
		PM_RAWDATA, //预览原始数据，对于黑白设备，必须设置为PM_RAWDATA
		PM_RGBDATA  //预览24位或32位彩色数据（由Bayer模式决定）
	};
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewSetMode
    // 功能：设置视频流为原始采集数据还是RGB 24位或32位彩色数据格式，一般用户无需设置
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       PreviewMode： 输入，设置的预览模式（参考KSJ_PREVIEWMODE定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewSetMode(int nIndex, KSJ_PREVIEWMODE PreviewMode);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetMode
    // 功能：获取相机的当前预览模式
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pPreviewMode  ： 输出，获取当前的预览模式（参考KSJ_PREVIEWMODE定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetMode(int nIndex, KSJ_PREVIEWMODE *pPreviewMode);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetDefaultMode
    // 功能：获取设备默认的预览模式
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pPreviewMode  ： 输出，获取相机默认的预览模式（参考KSJ_PREVIEWMODE定义）
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetDefaultMode(int nIndex, KSJ_PREVIEWMODE *pPreviewMode);
   
   //-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewStart
    // 功能：启动视频流，用户必须先通过KSJ_PreviewSetPos来设置视频显示的窗口及位置创建一个预览窗口，否则将看不到预览视频流
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       bStart  ： 输入，true 打开视频流，显示在窗口指定位置（参考KSJ_PreviewSetPos函数），false 关闭视频流 
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewStart(int nIndex, bool bStart);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewPause
    // 功能：暂停或继续视频流
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       bPause  ： 输入，true 暂停视频流，false 继续视频流 
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewPause(int nIndex, bool bPause);
	
	enum    KSJ_PREVIEWSTATUS //预览视频流的状态
	{
		PS_STOP, //视频流停止
		PS_START,//视频流运行
		PS_PAUSE //视频流暂停
	};
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetStatus
    // 功能：获取视频预览的状态
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pPreviewStatus: 输出，返回预览状态
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetStatus(int nIndex, KSJ_PREVIEWSTATUS *pPreviewStatus);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetFrameRate
    // 功能：获取帧速
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       fFrameRate： 输出，返回当前视频流的帧速
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetFrameRate(int nIndex, float *fFrameRate);
	
	//-----------------------------------------------------------------------------
    // 函数：KSJ_PreviewGetPausedData
    // 功能：获取暂停时的那一帧图像数据
    // 参数：
	//       nIndex： 输入，设备索引（从0开始，最大索引数为:连接到主机的设备数目减一）
    //       pData： 输出，由用户提供的数据区域，函数调用返回后，此区域会被填充暂停时的图像数据
    // 返回：参考返回状态码（KSJCode.H）
    // 说明：调用KSJ_Init函数初始化后调用
	//-----------------------------------------------------------------------------
	KSJ_API  int __stdcall KSJ_PreviewGetPausedData(int nIndex, unsigned char *pData);