Development/Samples/VisionPro/C#/KSJDemoCSharpVisionPro/KSJDemoCSharp/KSJApi.cs


        // Get The Max Preview FOV( Field Of View ） supported by device
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetDefaultFieldOfView(int nChannel, ref int pnColStart, ref int pnRowStart, ref int pnColSize, ref int pnRowSize, ref KSJ_ADDRESSMODE pColAddressMode, ref KSJ_ADDRESSMODE pRowAddressMode);
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewSetFieldOfView(int nChannel, int nColStart, int nRowStart, int nColSize, int nRowSize, KSJ_ADDRESSMODE ColAddressMode, KSJ_ADDRESSMODE RowAddressMode);
        // 获取采集视场的实际大小
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetFieldOfView(int nChannel, ref int pnColStart, ref int pnRowStart, ref int pnColSize, ref int pnRowSize, ref KSJ_ADDRESSMODE pColAddressMode, ref KSJ_ADDRESSMODE pRowAddressMode);
        // Preview Mode
        public enum KSJ_PREVIEWMODE
        {
            PM_RAWDATA,
            PM_RGBDATA
        };
        // Set Preview Mode
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewSetMode(int nChannel, KSJ_PREVIEWMODE PreviewMode);
        // Get Preview Mode
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetMode(int nChannel, ref KSJ_PREVIEWMODE PreviewMode);
        // Get Default Mode
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetDefaultMode(int nChannel, ref KSJ_PREVIEWMODE PreviewMode);
        public enum KSJ_PREVIEWSTATUS
        {
            PS_STOP,
            PS_START,
            PS_PAUSE
        };
        // Get Preview Status
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetStatus(int nChannel, ref KSJ_PREVIEWSTATUS pPreviewStatus);
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetSize(int nChannel, ref int pnWidth, ref int pnHeight);
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetSizeEx(int nChannel, ref int pnWidth, ref int pnHeight, ref int pnBitCount);
        [DllImport("KSJApi.dll")]
		public static extern int KSJ_PreviewSetPos( int nChannel, IntPtr hWnd, int x, int y, int nWidth, int nHeight  );
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetPos(int nChannel, ref int x, ref int y, ref int nWidth, ref int nHeight);
        [DllImport("KSJApi.dll")]
		public static extern int KSJ_PreviewStart( int nChannel, bool  bStart );
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewPause(int nChannel, bool bPause);
        // 获取预览帧速
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetFrameRate(int nChannel, ref float fFrameRate);
        // Get Paused Image Data when PS_PAUSE Status
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetPausedData(int nChannel, byte[] pData);
        // Get Paused Image Data when PS_PAUSE Status
        [DllImport("KSJApi.dll")]
        public static extern int KSJ_PreviewGetPausedData(int nChannel, byte[] pData, ref int pnWidth, ref int pnHeight, ref int pnBitCount);

        [DllImport("kernel32.dll")]
        public extern static short QueryPerformanceCounter(ref long x);
        [DllImport("kernel32.dll")]
        public extern static short QueryPerformanceFrequency(ref long x);
    }
}
